public/style.css
* {
  box-sizing: border-box;
}

body {
  font-family: sans-serif;
}

a {
  text-decoration: none;
  color: black;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em;
}

form div {
  margin: 1em;
  display: inline-block;
}

img {
  max-width: 100%;
  max-height: 100%;
}

/* ---- AllProducts ---- */

.productsAndCart {
  display: flex;
  justify-content: center;
  width: 1200px;
  margin: 0 auto;
}

.allProductContainer {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  justify-content: center;
  max-width: 760px;
}

.cartContainer {
  min-width: 300px;
  margin: 0.3em;
}

/* ---- ProductCard ---- */

.productContainer {
  height: auto;
  width: 240px;
  display: flex;
  flex-direction: column;
  border: 1px solid black;
  padding: 0.5em;
  margin: 0.3em;
}

.productContainer * {
  margin: 0.3em 0;
}

.productContainer img {
  height: 200px;
  width: auto;
}

.productContainer .nameAndPrice {
  display: flex;
  flex-wrap: nowrap;
  align-items: baseline;
  justify-content: space-between;
}

.productName {
  font-weight: bold;
  max-width: 120px;
}

/* ---- SingleProduct ---- */

.sp-view-container {
  display: flex;
  justify-content: center;
  margin: 0 auto;
}

.backToAllProducts {
  margin-bottom: 0.5em;
}

.singleProductContainer {
  display: flex;
  flex-direction: column;
  min-width: 600px;
}

.buyupContainer {
  min-height: 3em;
}

.imgAndDescription {
  display: flex;
}

.imgAndDescription img {
  height: 100%;
  width: auto;
  max-height: 240px;
  align-self: center;
}

.descriptionSidePanel {
  display: flex;
  flex-direction: column;
  max-width: 400px;
  padding: 0.5em;
}

.descriptionSidePanel * {
  margin: 0.5em 0;
}

.productName {
  font-weight: bold;
}

.quantityContainer {
  display: flex;
  flex-direction: column;
  width: 200px;
  margin: 0 auto;
}

.quantityValueAndBtns {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.cartContainer {
  position: sticky;
  top: 2em;
  min-width: 320px;
  height: 70vh;
  border: 1px solid black;
}

.cartTitle {
  margin: 0.3em;
}

.cartContainer .checkoutBtn {
  position: absolute;
  bottom: -2em;
  left: 38%;
}

/* ---- Cart ---- */

.cartBox {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  height: 90%;
  width: 100%;
  padding: 0.3em;
  overflow-y: auto;
}

.myCartAndClearCartBtn {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

/* ---- CartProductCard ---- */

.cartProductContainer {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: space-between;
  height: 4em;
  width: 300px;
  margin: 0.5em;
  padding: 0.5em;
  border: 1px solid black;
}

.imgAndPurchaseDetails {
  display: flex;
  height: 3em;
}

.imgAndPurchaseDetails img {
  height: 100%;
  width: auto;
  max-width: 80px;
  margin-right: 0.5em;
}

.cartProductContainer .nameAndPrice {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: min-content;
  margin: 0 0.5em;
}

.nameAndPrice .productPrice {
  margin-top: 0.3em;
}

.productName {
  font-weight: normal;
}

.cartProductContainer .quantityAndBtns {
  display: flex;
  width: 100px;
  align-items: center;
  justify-content: space-around;
}

